--- a/main-page.html
+++ b/main-page.html
@@ -50,7 +50,7 @@
 			{
 				"name": "♥ 🇹🇭 Movies 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/8qvcngh1fcavhz06o404z/.png?rlkey=8tbipbw6ixf2gri8rzvl93g7h&dl=1",
-				"url": "https://wandering-oldman.github.io/allmovies/",
+				"url": "https://wandering-oldman.github.io/allmovies/allmovies.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
