--- a/main-page.html
+++ b/main-page.html
@@ -1,30 +1,21 @@
 	{
    "name": "For ฟรี อย่านำไปจำหน่าย นะจ๊ะ นะจ๊ะ",
    "author": "ผู้เฒ่าพเนจร",
-   "url": "https://wandering-oldman.github.io/main-page/main-page.html",
+   "url": "http://tiny.cc/freetv2238",
    "image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
    "info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 		 
    "groups": [
 
-                {"name": "♥ 🇹🇭Refresh 🇹🇭♥",
-                "image": "https://cdn.dribbble.com/users/442750/screenshots/2196790/3.gif",
-                "url": "https://wandering-oldman.github.io/main-page/main-page.html",
-                "import": false },
+
 
 			{
 				"name": "♥ 🇹🇭 ผู้เฒ่าพเนจร 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
-				"url": "https://playidtv24.vercel.app/FreeChannel.html",
+				"url": "https://wandering-oldman.github.io/freetv2238/freetv2238.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
-			{
-				"name": "♥ 🇹🇭 Guflix 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/j8uynudhcemppxyngxdql/gluflix.png?rlkey=mme78m06wz9n4arfaygpfezav&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/hi85h985kutk07w1khb2x/guflix-folder.txt?rlkey=e0x0rcpm3804wui4pnrddift0&dl=1",
-				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-				"import": false},
 
 			{
 				"name": "♥ 🇹🇭 PLAYIDTV 🇹🇭♥",
@@ -43,21 +34,20 @@
 			{
 				"name": "♥ 🇹🇭 Free 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/8qvcngh1fcavhz06o404z/.png?rlkey=8tbipbw6ixf2gri8rzvl93g7h&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/1e5fy0shp918qv6xcggli/new-5.txt?rlkey=tzkuwrsqqantj50hhkiq651b2&dl=1",
+				"url": "https://www.dropbox.com/scl/fi/hize58kjdshga65fqr1fj/guflix-luve1.html?rlkey=yjaoh6w1ovzx7maqm21fjnloa&dl=1",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
 			{
-				"name": "♥ 🇹🇭 Movies 🇹🇭♥",
+				"name": "♥ 🇹🇭 Free 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/8qvcngh1fcavhz06o404z/.png?rlkey=8tbipbw6ixf2gri8rzvl93g7h&dl=1",
-				"url": "https://wandering-oldman.github.io/allmovies/allmovies.html",
+				"url": "https://www.dropbox.com/scl/fi/h6lifhvpyde72k0g7o0mi/guflix-live.txt?rlkey=6oy3uc77cb6qv0rry699ct0bf&dl=1",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
 
-
 ]
-},
+}
 
 <html>
 <head>
@@ -73,9 +63,3 @@
 </center>
 </body>
 </html>
-
-
-
-
-
-
