--- a/main-page.html
+++ b/main-page.html
@@ -20,31 +20,38 @@
 			{
 				"name": "♥ 🇹🇭 PLAYIDTV 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/xvw2bqbzujchf29d7rx25/playidtv.png?rlkey=heovtlesb3cjb7br7rp28a7em&dl=1",
-				"url": "http://tiny.cc/oldman-iptv2238",
+				"url": "http://tiny.cc/playidtv",
+				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
+				"import": false},
+	 
+			{ 
+				"name": "Dookeela", 
+				"image": "https://www.dropbox.com/scl/fi/59nlstp91lwx3fbzzsobk/dookeela.png?rlkey=c2hl12phatd044kwew9q3hegx&dl=1", 
+				"url": "https://www.dropbox.com/scl/fi/mg1b78mdoxfw62642f63x/dookeela.w3u?rlkey=2ls225kqc2nbdbacwx3wfhvg4&dl=1", 		
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
 			{
-				"name": "♥ 🇹🇭 X.V.T.Z 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/jeqlsmdg6lbyt3vudbwby/xvtz.png?rlkey=039k53tg55j6fsp64qmpqibq5&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/0vg0vkg9hw3or25bdtyar/nida.txt?rlkey=p4qjpglzv28bq4dybnb7nh9jq&dl=1",
+				"name": "♥ 🇹🇭 The Watcher Documentary 🇹🇭♥",
+				"image": "https://www.dropbox.com/scl/fi/121sjqvv8wxadbl143985/the-watcher.png?rlkey=39m2b6zuny6q18exterdwe4yo&dl=1",
+				"url": "https://www.dropbox.com/scl/fi/9edff7y8bqnm0axno3kmt/wondering-old-man-the-watcher-documentary.w3u?rlkey=dho4yi5af16gx41lri47bmho8&dl=1",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
+
 			{
-				"name": "♥ 🇹🇭 Free 🇹🇭♥",
+				"name": "♥ 🇹🇭 Series 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/8qvcngh1fcavhz06o404z/.png?rlkey=8tbipbw6ixf2gri8rzvl93g7h&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/hize58kjdshga65fqr1fj/guflix-luve1.html?rlkey=yjaoh6w1ovzx7maqm21fjnloa&dl=1",
+				"url": "https://wandering-oldman.github.io/guflix-series/guflix-series.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
 			{
-				"name": "♥ 🇹🇭 Free 🇹🇭♥",
+				"name": "♥ 🇹🇭 Live 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/8qvcngh1fcavhz06o404z/.png?rlkey=8tbipbw6ixf2gri8rzvl93g7h&dl=1",
 				"url": "https://www.dropbox.com/scl/fi/h6lifhvpyde72k0g7o0mi/guflix-live.txt?rlkey=6oy3uc77cb6qv0rry699ct0bf&dl=1",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
-
 
 ]
 }
