--- a/main-page.html
+++ b/main-page.html
@@ -1,7 +1,7 @@
 	{
    "name": "For ฟรี อย่านำไปจำหน่าย นะจ๊ะ นะจ๊ะ",
    "author": "ผู้เฒ่าพเนจร",
-   "url": "http://tiny.cc/freetv2238",
+   "url": "",
    "image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
    "info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 		 
