--- a/main-page.html
+++ b/main-page.html
@@ -10,12 +10,11 @@
 
 
 			{
-				"name": "♥ 🇹🇭 ผู้เฒ่าพเนจร 🇹🇭♥",
+				"name": "♥ 🇹🇭 ผู้เฒ่าพเนจรนะจ๊ะ 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
-				"url": "https://wandering-oldman.github.io/wandering-oldman/FreeChannel.html",
+				"url": "https://wandering-oldman.github.io/freetv2238/freetv2238.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
-
 
 			{
 				"name": "♥ 🇹🇭 PLAYIDTV 🇹🇭♥",
@@ -37,7 +36,6 @@
 				"url": "https://www.dropbox.com/scl/fi/9edff7y8bqnm0axno3kmt/wondering-old-man-the-watcher-documentary.w3u?rlkey=dho4yi5af16gx41lri47bmho8&dl=1",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
-
 
 			{
 				"name": "♥ 🇹🇭 Series 🇹🇭♥",
