--- a/main-page.html
+++ b/main-page.html
@@ -1,7 +1,7 @@
 	{
    "name": "ผู้เฒ่าพเนจร",
    "author": "ผู้เฒ่าพเนจร",
-   "url": "",
+   "url": "https://wandering-oldman.github.io/main-page/main-page.html",
    "image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
    "info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 		 
@@ -12,7 +12,7 @@
 			{
 				"name": "♥ 🇹🇭 ผู้เฒ่าพเนจรนะจ๊ะ 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
-				"url": "https://wandering-oldman.github.io/freetv2238/freetv2238.html",
+				"url": "https://wandering-oldman.github.io/wandering-oldman/FreeChannel.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
