--- a/main-page.html
+++ b/main-page.html
@@ -8,35 +8,13 @@
    "groups": [
 
 			{
-				"name": "♥ 🇹🇭 ผู้เฒ่าพเนจรนะจ๊ะ 🇹🇭♥",
+				"name": "♥ 🇹🇭 ผู้เฒ่าพเนจร 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
 				"url": "https://wandering-oldman.github.io/wandering-oldman/FreeChannel.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
-			{
-				"name": "♥ 🇹🇭 PLAYIDTV 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/xvw2bqbzujchf29d7rx25/playidtv.png?rlkey=heovtlesb3cjb7br7rp28a7em&dl=1",
-				"url": "http://tiny.cc/playidtv",
-				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-				"import": false},
-	 
-			{ 
-				"name": "Dookeela", 
-				"image": "https://www.dropbox.com/scl/fi/59nlstp91lwx3fbzzsobk/dookeela.png?rlkey=c2hl12phatd044kwew9q3hegx&dl=1", 
-				"url": "https://www.dropbox.com/scl/fi/mg1b78mdoxfw62642f63x/dookeela.w3u?rlkey=2ls225kqc2nbdbacwx3wfhvg4&dl=1", 		
-				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 The Watcher Documentary 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/121sjqvv8wxadbl143985/the-watcher.png?rlkey=39m2b6zuny6q18exterdwe4yo&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/9edff7y8bqnm0axno3kmt/wondering-old-man-the-watcher-documentary.w3u?rlkey=dho4yi5af16gx41lri47bmho8&dl=1",
-				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-				"import": false},
-
-
-
+ 
 ]
 }
 
