--- a/main-page.html
+++ b/main-page.html
@@ -8,7 +8,7 @@
    "groups": [
 
 			{
-				"name": "♥ 🇹🇭 ผู้เฒ่าพเนจร 🇹🇭♥",
+				"name": "♥ 🇹🇭 ผู้เฒ่าพเนจรนะจ๊ะ 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
 				"url": "https://wandering-oldman.github.io/freetv2238/freetv2238.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
