--- a/main-page.html
+++ b/main-page.html
@@ -22,7 +22,7 @@
 			{
 				"name": "♥ 🇹🇭 Guflix 🇹🇭♥",
 				"image": "https://www.dropbox.com/scl/fi/212nz9z3bi67xvxjnl90u/.png?rlkey=s828nfzs8yao5b0o3zz1g97er&dl=1",
-				"url": " https://wandering-oldman.github.io/guflix-folder/guflix-folder.html",
+				"url": " http://guflix.streaming-fast.com/wiseplay/guflix.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
